--- a/src/css/main.css
+++ b/src/css/main.css
@@ -93,6 +93,8 @@ Variables
   --newsletter-sub-btn-hover: hsl(108, 18%, 80%);
   --category-hover: hsl(120, 9%, 35%);
   --clr-navbar: hsl(180, 20%, 35%);
+  --clr-sidebar-bg: hsl(150, 30%, 45%);
+  --clr-sidebar-category-font: hsl(15, 20%, 30%);
   --clr-toc-link: hsl(7, 47%, 46%);
   --clr-contact-bg: rgba(125, 185, 80, 0.5);
   --clr-footer-bg: rgba(125, 255, 80, 0.04);
@@ -232,7 +234,7 @@ h4 {
   font-size: var(--fontSize-2);
 }
 p {
-  margin-bottom: 1.25rem;
+  margin-bottom: 0.5rem;
   color: var(--clr-white);
 }
 @media screen and (min-width: 800px) {
@@ -446,7 +448,7 @@ Sidebar
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--clr-grey-10);
+  background: var(--clr-sidebar-bg);
   transition: var(--transition);
   display: grid;
   align-items: center;
@@ -460,10 +462,11 @@ Sidebar
   visibility: visible;
 }
 .sidebar-links li {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
+  list-style: none;
 }
 .sidebar-links .page-link {
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: block;
   color: var(--clr-grey-1);
   font-weight: 700;
@@ -473,8 +476,8 @@ Sidebar
   margin: 1rem 0;
 }
 .sidebar .category {
-  color: var(--clr-grey-5);
-  font-size: 1.5rem;
+  color: var(--clr-sidebar-category-font);
+  font-size: 1rem;
   font-weight: 700;
   text-transform: capitalize;
   padding-left: 1rem;
@@ -632,6 +635,15 @@ Single Pages
 .error-page h3 {
   margin-bottom: 2rem;
   padding: 0 2rem;
+}
+
+/* about page */
+.about-page {
+  background: var(--clr-grey-7);
+  min-height: calc(100vh - 12rem);
+  display: grid;
+  place-items: center;
+  padding: 5rem 0;
 }
 
 /* contact page */
