--- a/src/css/main.css
+++ b/src/css/main.css
@@ -219,6 +219,7 @@ h4 {
   margin-bottom: 0.75rem;
   font-family: var(--ff-primary);
   margin-top: var(--spacing-10);
+  scroll-margin-top: 6rem;
 }
 h1 {
   font-size: var(--fontSize-5);
