Updated some posts due to changes made in Code Block styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -268,6 +268,11 @@ p {
 strong {
   color: white;
 }
+
+svg {
+  vertical-align: middle;
+}
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: var(--fontSize-6);
