Adjusted font size in mdx tables and added a new border radius variable to make tables and code blocks' corners smoother

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -208,7 +208,7 @@ table {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1.7rem;
   border-collapse: collapse;
   width: 100%;
@@ -229,21 +229,27 @@ th {
   -moz-font-feature-settings: 'tnum';
   -ms-font-feature-settings: 'tnum';
   -webkit-font-feature-settings: 'tnum';
-  padding-left: 0.96667rem;
-  padding-right: 0.96667rem;
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
   padding-top: 0.725rem;
   padding-bottom: calc(0.725rem - 1px);
 }
 th:first-child {
-  padding-left: 0.96667rem;
+  padding-left: 0.5rem;
   border-top-left-radius: var(--radius-2);
 }
 th:last-child {
-  padding-right: 0.96667rem;
+  padding-right: 0.5rem;
   border-top-right-radius: var(--radius-2);
 }
 td {
   background-color: var(--clr-green-5);
+}
+tr:last-child > td:first-child {
+  border-bottom-left-radius: var(--radius-2);
+}
+tr:last-child > td:last-child {
+  border-bottom-right-radius: var(--radius-2);
 }
 
 /* blockquote p {
