Made open/close button on Accordion component persist through the pages using global context

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -573,6 +573,7 @@ Sidebar
   display: block;
   color: yellow;
   font-weight: 700;
+  line-height: 2;
 }
 /* .sidebar .categories { */
 /*   flex-direction: column; */
