Renamed directory names for posts and changed background color for 404 page, added 'published' filter to frontmatter of each post to filter out any posts in draft

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -705,7 +705,7 @@ Single Pages
 
 /* error page */
 .error-page {
-  background: var(--clr-primary-10);
+  background: var(--clr-green-4);
 }
 .error-page span {
   font-size: 10rem;
