Improved Card component's ui

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -86,6 +86,7 @@ Variables
   --radius-2: 0.5rem;
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --card-shadow: 0 5px 15px rgba(0, 0, 0, 0.55);
   --navbar-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
   --max-width: 1170px;
   --fixed-width: 700px;
